@@ -462,6 +462,16 @@ S3method(scores, oneStepAhead)
 S3method(calibrationTest, hhh4)
 S3method(calibrationTest, oneStepAhead)
 
+## for plots of hhh4 simulations
+S3method(plot, hhh4sims)
+export(as.hhh4simslist)
+S3method(as.hhh4simslist, hhh4sims)
+S3method(as.hhh4simslist, list)
+S3method(as.hhh4simslist, hhh4simslist)
+S3method(plot, hhh4simslist)
+export(plotHHH4sims_size)
+export(plotHHH4sims_size_total)
+
 ## backwards-compatibility for old class name "ah4"
 S3method(print, ah4)
 S3method(summary, ah4)
