@@ -6,7 +6,7 @@
 \encoding{latin1}
 
 
-\section{Changes in surveillance version 1.10-0 (2015-09-07)}{
+\section{Changes in surveillance version 1.10-0 (2015-09-09)}{
 
 \subsection{NEW FEATURES}{
   \itemize{
@@ -28,6 +28,11 @@
     gained an option \code{decompose} to plot the contributions from
     each single unit (and the endemic part) instead of the default
     endemic + AR + neighbours decomposition.
+
+    \item New \code{plot}-method for simulations from \code{"hhh4"}
+    models (using \code{simulate.hhh4(..., simplify = TRUE)}, which now
+    has a dedicated class: \code{"hhh4sims"}) to investigate the final
+    size distribution (possibly stratified by groups of units).
 
     \item The argument \code{idx2Exp} of \code{coef.hhh4()} may now be
     conveniently set to \code{TRUE} to exp-transform all coefficients.
